@@ -1543,7 +1543,9 @@ type socket_bool_option =
 type socket_int_option =
     SO_SNDBUF    (** Size of send buffer *)
   | SO_RCVBUF    (** Size of received buffer *)
-  | SO_ERROR     (** Deprecated.  Use {!getsockopt_error} instead. *)
+  | SO_ERROR
+    [@ocaml.deprecated "Use Unix.getsockopt_error instead."]
+    (** Deprecated.  Use {!getsockopt_error} instead. *)
   | SO_TYPE      (** Report the socket type *)
   | SO_RCVLOWAT  (** Minimum number of bytes to process for input operations *)
   | SO_SNDLOWAT  (** Minimum number of bytes to process for output operations *)
