@@ -48,6 +48,10 @@ Working version
   bigarray library (the Bigarray module is now part of the standard library).
   (Nicolás Ojeda Bär, review by Kate Deplaix and Anil Madhavapeddy)
 
+* #10924: Add deprecated attribute to Printexc.catch, Printf.kprintf and
+  Unix.SO_ERROR.
+  (Nicolás Ojeda Bär, review by Damien Doligez)
+
 ### Other libraries:
 
 ### Tools:
